#112 Refactoring entity constructors - remove id field from constructors